# umap

src/umap/: Buffer.cpp  Buffer.hpp  EvictManager.cpp  EvictManager.hpp  EvictWorkers.cpp  RegionManager.cpp  RegionManager.hpp  WorkerPool.hpp  umap.cpp  umap.h
src/umap/store/: SparseStore.cpp  SparseStore.h  Store.hpp  StoreFile.cpp  StoreFile.h
tests/: CMakeLists.txt
tests/eviction/: CMakeLists.txt  evict.cpp
